[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazyme"
description = "Lazy python recipes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "alvations" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/alvations/lazyme"

[project.optional-dependencies]
hashing = ["xxhash", "tqdm"]
wiki = ["ujson"]
dev = ["pytest", "ruff", "pre-commit", "xxhash", "tqdm"]

[tool.hatch.version]
path = "lazyme/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["lazyme"]

[tool.hatch.build.targets.sdist]
include = ["/lazyme", "/README.md", "/LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["Untitled.ipynb", "dist", ".ipynb_checkpoints"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"lazyme/__init__.py" = ["F401"]  # re-exports are the public API
"tests/*" = ["F401"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests", "lazyme"]
